add sqlite database storage

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     paperweight.paperDevBundle("1.21.4-R0.1-SNAPSHOT")
+    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
 }
 
 paperweight {
